GNOME Bugzilla – Bug 563561
g-t doesn't notice if compositing manager starts/stops
Last modified: 2008-12-15 18:38:56 UTC
Have a g-t running. Turn metacity compositing_manager on via gconf. Change g-t background to transparent, see it doesn't use true transparency. Restart and it will.
Created attachment 124104 [details] [review] proposed fix Re-realize the TerminalWindow from the composited-changed signal on GdkScreen. A problem is that the focus stealing prevention of metacity thinks that it's a new window, so it's marked as such in the window list applet. Adding the user time stuff didn't fix that either. And all windows come to the current workspace, and sometimes change their position. Also maybe re-realizing the windows is something that gtk itself should do in this case?
Closing this; I'll open a new bug for the remaining issues with the patch.