Disable hack to listen compositing changes

It seems now GNOME bug https://bugzilla.gnome.org/show_bug.cgi?id=563561
doesnt happen and disable this hack avoid to shuffle terminal windows when
compositing is enabled/disabled